--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,5 +22,19 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "stratos", sans-serif;
+}
+
+@keyframes scroll {
+  0% { transform: translateX(0%); }
+  100% { transform: translateX(-50%); }
+}
+
+.debug-scroll {
+  animation: scroll 30s linear infinite;
+  white-space: nowrap;
+}
+
+summary::-webkit-details-marker {
+  display: none;
 }
