--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,8 @@
-@import "tailwindcss";
 
+@import "tailwindcss";
+html {
+  scroll-behavior: smooth;
+}
 :root {
   --background: #ffffff;
   --foreground: #171717;
